Fix graphic bug on the Login/Signin forms when the screen was too small in height

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,21 @@
     text-align: center;
 }
 
+.app-body {
+    max-height: calc(100vh - 106px);
+    overflow-y: auto;
+}
+
+.form-container {
+    height: calc(100% - 52px);
+}
+
+.form-container > form {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 app-root > .container {
     height: 100vh;
 }
@@ -13,14 +28,6 @@ main {
 #message-box {
     height: calc(100% - 78px);
     overflow-y: auto;
-}
-
-.form-container > form {
-    position: absolute;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    width: 50%;
 }
 
 button:hover {
